# Assignment_3_Client

./: CMakeLists.txt
include/: BGSClient.h  ReadSocket.h  SocketReader.h  connectionHandler.h
src/: BGSClient.cpp  BGSclient.cpp  ReadSocket.cpp  SocketReader.cpp  connectionHandler.cpp  echoClient.cpp
